@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.427 2013/12/29 17:34:06 markisch Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.428 2014/01/13 18:39:39 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -1088,18 +1088,20 @@ static void
 set_clip()
 {
     c_token++;
-    if (END_OF_COMMAND)
+    if (END_OF_COMMAND) {
 	/* assuming same as points */
 	clip_points = TRUE;
-    else if (almost_equals(c_token, "p$oints"))
+    } else if (almost_equals(c_token, "p$oints")) {
 	clip_points = TRUE;
-    else if (almost_equals(c_token, "o$ne"))
+	c_token++;
+    } else if (almost_equals(c_token, "o$ne")) {
 	clip_lines1 = TRUE;
-    else if (almost_equals(c_token, "t$wo"))
+	c_token++;
+    } else if (almost_equals(c_token, "t$wo")) {
 	clip_lines2 = TRUE;
-    else
+	c_token++;
+    } else
 	int_error(c_token, "expecting 'points', 'one', or 'two'");
-    c_token++;
 }
 
 
@@ -1440,12 +1442,13 @@ set_encoding()
 		if (strcmp(encoding_names[i], senc) == 0)
 		    temp = i;
 	    free(senc);
+	} else {
+	    c_token++;
 	}
 
 	if (temp == S_ENC_INVALID)
 	    int_error(c_token, "unrecognized encoding specification; see 'help encoding'.");
 	encoding = temp;
-	c_token++;
     }
 
     /* Set degree sign to match encoding */
@@ -2948,6 +2951,7 @@ set_palette_defined()
 	sm_palette.gradient_num = 8;
 	sm_palette.cmodel = C_MODEL_RGB;
 	sm_palette.smallest_gradient_interval = 0.1;  /* From pal[][] */
+	c_token--; /* Caller will increment! */
 	return 0;
     }
 
